--- a/ManagementSystem/ManagementSystem/Views/Products/EditProductView.axaml
+++ b/ManagementSystem/ManagementSystem/Views/Products/EditProductView.axaml
@@ -3,11 +3,11 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:vm="clr-namespace:ManagementSystem.ViewModels.Products"
+             xmlns:converter='clr-namespace:ManagementSystem.Converters'
              xmlns:productVms="clr-namespace:ManagementSystem.ViewModels.DataVM.Product"
-             xmlns:converter="clr-namespace:ManagementSystem.Converters"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="ManagementSystem.Views.Products.CreateProductView"
-             x:DataType="vm:CreateProductViewModel">
+             x:Class="ManagementSystem.Views.Products.EditProductView"
+             x:DataType="vm:EditProductViewModel">
     <UserControl.Resources>
         <converter:BytesImageConverter x:Key="ImageConverter"/>
     </UserControl.Resources>
@@ -17,7 +17,7 @@
             <Panel Grid.Row="0"
                    Background="{StaticResource LighterColor}"
                    Margin="0 0 0 10">
-                <TextBlock Text="Create product"
+                <TextBlock Text="Edit product"
                            FontSize="18"
                            FontWeight="Bold"
                            HorizontalAlignment="Center"
@@ -38,27 +38,31 @@
                                 Orientation="Vertical">
                         <TextBlock Text="title"/>
                         <TextBox Watermark="Title of product"
-                                 Text="{Binding Model.Title}"/>
+                                 Text="{Binding Title}"
+                                 IsEnabled="{Binding ProductIsInitialized}"/>
                     </StackPanel>
                     <StackPanel Spacing="0"
                                 Orientation="Vertical">
                         <TextBlock Text="description"/>
                         <TextBox Watermark="Description of product"
-                                 Text="{Binding Model.Description}"
+                                 Text="{Binding Description}"
                                  TextWrapping="Wrap"
-                                 MaxHeight="150"/>
+                                 MaxHeight="150"
+                                 IsEnabled="{Binding ProductIsInitialized}"/>
                     </StackPanel>
                     <StackPanel Spacing="0"
                                 Orientation="Vertical">
                         <TextBlock Text="cost"/>
                         <TextBox Watermark="Cost of product"
-                                 Text="{Binding Model.Cost}"/>
+                                 Text="{Binding Cost}"
+                                 IsEnabled="{Binding ProductIsInitialized}"/>
                     </StackPanel>
                     <StackPanel Spacing="30"
                                 Orientation="Vertical">
                         <TextBlock Text="category"/>
                         <ComboBox ItemsSource="{Binding Categories}"
-                                  SelectedItem="{Binding Model.Category}">
+                                  SelectedItem="{Binding Category}"
+                                  IsEnabled="{Binding ProductIsInitialized}">
                             <ComboBox.ItemTemplate>
                                 <DataTemplate x:DataType="productVms:ProductCategoryViewModel">
                                     <TextBlock Text="{Binding CategoryName}"/>
@@ -78,7 +82,8 @@
                         <Button DockPanel.Dock="Right"
                                 Padding="20 5"
                                 Content="Add photo"
-                                Command="{Binding AddProductPhotoCommand}"/>
+                                Command="{Binding AddProductPhotoCommand}"
+                                IsEnabled="{Binding ProductIsInitialized}"/>
                         <TextBlock Text="Product photo"
                                    FontStyle="Italic"
                                    FontSize="18"
@@ -89,10 +94,10 @@
                                FontSize="14"
                                HorizontalAlignment="Center"
                                VerticalAlignment="Center"
-                               IsVisible="{Binding Model.ImagesIsEmpty}"/>
+                               IsVisible="{Binding ImagesIsEmpty}"/>
                     <ItemsControl Grid.Row="1"
-                                  ItemsSource="{Binding Model.Images}"
-                                  IsVisible="{Binding !Model.ImagesIsEmpty}">
+                                  ItemsSource="{Binding Images}"
+                                  IsVisible="{Binding !ImagesIsEmpty}">
                         <ItemsControl.ItemsPanel>
                             <ItemsPanelTemplate>
                                 <WrapPanel Orientation="Horizontal"/>
@@ -101,15 +106,16 @@
                         <ItemsControl.ItemTemplate>
                             <DataTemplate>
                                 <Grid ColumnDefinitions="* 20 Auto">
-                                    <Image Width="250"
+                                    <Image Grid.Column="0"
+                                           Width="250"
                                            Height="250"
                                            Stretch="Uniform"
-                                           Source="{Binding ., Converter={StaticResource ImageConverter}}"
+                                           Source="{Binding Image, Converter={StaticResource ImageConverter}}"
                                            Margin="0 0  25 0"/>
                                     <Button Grid.Column="2"
                                             VerticalAlignment="Bottom"
                                             Padding="0"
-                                            Command="{Binding $parent[UserControl].((vm:CreateProductViewModel)DataContext).RemoveProductPhotoCommand}"
+                                            Command="{Binding $parent[UserControl].((vm:EditProductViewModel)DataContext).RemoveProductPhotoCommand}"
                                             CommandParameter="{Binding .}"
                                             Background="Brown">
                                         <Image Width="32"
