--- a/ManagementSystem/ManagementSystem/Views/Products/ProductsView.axaml
+++ b/ManagementSystem/ManagementSystem/Views/Products/ProductsView.axaml
@@ -36,7 +36,7 @@
                        HorizontalAlignment="Center"
                        VerticalAlignment="Center"/>
         </Border>
-        <ScrollViewer Grid.Row="0"
+        <ScrollViewer Grid.Row="1"
                       Padding="0 0 20 0">
             <ItemsControl ItemsSource="{Binding Products}"
                           IsVisible="{Binding !ProductsIsEmpty}">
@@ -59,49 +59,87 @@
                                       RowDefinitions="2* *"
                                       Margin="5">
                                     <Image Grid.Row="0"
-                                           Source="{Binding Images[0], Converter={StaticResource ImageConverter}}"
-                                           Stretch="Uniform"/>
-                                    <StackPanel Grid.Row="1" Spacing="20">
+                                           Source="{Binding Images[0].Image, Converter={StaticResource ImageConverter}}"
+                                           Stretch="Uniform"
+                                           MaxWidth="350"
+                                           MaxHeight="350"/>
+                                    <Panel Grid.Row="0"
+                                           Background="White"
+                                           IsVisible="{Binding Images[0], Converter={x:Static ObjectConverters.IsNull}}"
+                                           MaxWidth="350"
+                                           MaxHeight="350">
+                                        <Image Source="avares://ManagementSystem/Assets/no-image.png"
+                                               Width="96"
+                                               Height="96"
+                                               Margin="100"
+                                               Stretch="Uniform"/>
+                                    </Panel>
+                                    <StackPanel Grid.Row="1" 
+                                                Margin="0 20 0 0"
+                                                Spacing="20">
                                         <StackPanel Orientation="Horizontal"
                                                     Spacing="10">
                                             <TextBlock Text="Title:"
                                                        FontWeight="Bold"
-                                                       FontSize="16"/>
+                                                       FontSize="16"
+                                                       Foreground="White"/>
                                             <TextBlock Text="{Binding Title}"
-                                                       FontSize="16"/>
+                                                       FontSize="16"
+                                                       Foreground="White"/>
                                         </StackPanel>
                                         <StackPanel Spacing="10">
                                             <StackPanel Orientation="Horizontal"
                                                         Spacing="10">
                                                 <TextBlock Text="Description:"
-                                                           FontWeight="Bold"/>
-                                                <TextBlock Text="{Binding Description}"/>
+                                                           FontWeight="Bold"
+                                                           Foreground="White"/>
+                                                <TextBlock Text="{Binding Description}"
+                                                           Foreground="White"/>
                                             </StackPanel>
                                             <StackPanel Orientation="Horizontal"
                                                         Spacing="10">
                                                 <TextBlock Text="Cost:"
-                                                           FontWeight="Bold"/>
+                                                           FontWeight="Bold"
+                                                           Foreground="White"/>
                                                 <TextBlock Text="{Binding Cost}"
-                                                           Foreground="{StaticResource DarkerColor}"/>
+                                                           Foreground="White"/>
                                             </StackPanel>
                                         </StackPanel>
                                     </StackPanel>
                                 </Grid>
-                                <StackPanel Grid.Column="1"
-                                            Spacing="10">
-                                    <Button Padding="6"
-                                            Background="Coral">
-                                        <Image Source="avares://ManagementSystem/Assets/edit.png"
-                                               Width="32"
-                                               Height="32"/>
-                                    </Button>
-                                    <Button Padding="6"
-                                            Background="Brown">
-                                        <Image Source="avares://ManagementSystem/Assets/trash.png"
-                                               Width="32"
-                                               Height="32"/>
-                                    </Button>
-                                </StackPanel>
+                                <DockPanel Grid.Column="1"
+                                           LastChildFill="False">
+                                    <StackPanel DockPanel.Dock="Top"
+                                                Spacing="10">
+                                        <Button Padding="6"
+                                                Background="Coral">
+                                            <Image Source="avares://ManagementSystem/Assets/edit.png"
+                                                   Width="32"
+                                                   Height="32"/>
+                                        </Button>
+                                        <Button Padding="6"
+                                                Background="Brown">
+                                            <Image Source="avares://ManagementSystem/Assets/trash.png"
+                                                   Width="32"
+                                                   Height="32"/>
+                                        </Button>
+                                    </StackPanel>
+                                    <StackPanel DockPanel.Dock="Bottom"
+                                                Spacing="10">
+                                        <Button Padding="6"
+                                                Background="Peru">
+                                            <Image Source="avares://ManagementSystem/Assets/basket.png"
+                                                   Width="32"
+                                                   Height="32"/>
+                                        </Button>
+                                        <Button Padding="6"
+                                                Background="Green">
+                                            <Image Source="avares://ManagementSystem/Assets/shopping-basket.png"
+                                                   Width="32"
+                                                   Height="32"/>
+                                        </Button>
+                                    </StackPanel>
+                                </DockPanel>
                             </Grid>
                         </Border>
                     </DataTemplate>
