--- a/ManagementSystem/ManagementSystem/Views/Products/EditProductView.axaml
+++ b/ManagementSystem/ManagementSystem/Views/Products/EditProductView.axaml
@@ -78,8 +78,7 @@
                         <Button DockPanel.Dock="Right"
                                 Padding="20 5"
                                 Content="Add photo"
-                                Command="{Binding AddProductPhotoCommand}"
-                                IsEnabled="{Binding ProductIsInitialized}"/>
+                                Command="{Binding AddProductPhotoCommand}"/>
                         <TextBlock Text="Product photo"
                                    FontStyle="Italic"
                                    FontSize="18"
@@ -101,24 +100,26 @@
                         </ItemsControl.ItemsPanel>
                         <ItemsControl.ItemTemplate>
                             <DataTemplate>
-                                <Grid ColumnDefinitions="* 20 Auto">
-                                    <Image Grid.Column="0"
-                                           Width="250"
-                                           Height="250"
-                                           Stretch="Uniform"
-                                           Source="{Binding Image, Converter={StaticResource ImageConverter}}"
-                                           Margin="0 0  25 0"/>
-                                    <Button Grid.Column="2"
-                                            VerticalAlignment="Bottom"
-                                            Padding="0"
-                                            Command="{Binding $parent[UserControl].((vm:EditProductViewModel)DataContext).RemoveProductPhotoCommand}"
-                                            CommandParameter="{Binding .}"
-                                            Background="Brown">
-                                        <Image Width="32"
-                                               Height="32"
-                                               Source="avares://ManagementSystem/Assets/trash.png"/>
-                                    </Button>
-                                </Grid>
+                                <Border Margin="0 0 25 0"
+                                        Padding="10"
+                                        Background="{StaticResource LighterColorV2}">
+                                    <Grid ColumnDefinitions="* 10 Auto">
+                                        <Image Width="250"
+                                               Height="250"
+                                               Stretch="Uniform"
+                                               Source="{Binding .Image, Converter={StaticResource ImageConverter}}"/>
+                                        <Button Grid.Column="2"
+                                                VerticalAlignment="Bottom"
+                                                Padding="0"
+                                                Command="{Binding $parent[UserControl].((vm:EditProductViewModel)DataContext).RemoveProductPhotoCommand}"
+                                                CommandParameter="{Binding .}"
+                                                Background="Brown">
+                                            <Image Width="32"
+                                                   Height="32"
+                                                   Source="avares://ManagementSystem/Assets/trash.png"/>
+                                        </Button>
+                                    </Grid>
+                                </Border>
                             </DataTemplate>
                         </ItemsControl.ItemTemplate>
                     </ItemsControl>
